common-applications/test-environment/mindspore-usercenter-website/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-ingress
  namespace: mindspore-usercenter-website
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mindspore-usercenter.test.osinfra.cn
      secretName: website-tls
  rules:
    - host: mindspore-usercenter.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: website-service
              servicePort: 80
            path: /
